# markup-prompter

./: README.md  check.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/text_to_python/: text_to_python.ipynb
examples/text_to_python/src/: example0000.md  example0001.md  example0002.md  input.md  system.md
markup_prompter/: __init__.py  prompter.py
