[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "markup-prompter"
description = "Organizes prompts with markup."
readme = "README.md"
requires-python = ">=3.10, <3.12"
authors = [
    {name = "Yusuke Oda", email = "odashi@predicate.jp"}
]
keywords = [
    "sql",
    "chatgpt",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "marko>=1.3.0",
    "openai>=0.27.4",
    "tqdm>=4.65.0",
]
dynamic = [
    "version"
]

[project.optional-dependencies]
dev = [
    "black>=22.10",
    "flake8>=5.0",
    "isort>=5.10",
    "mypy>=0.991",
    "notebook>=6.5.1",
    "pyproject-flake8>=5.0",
    "pytest>=7.1",
]
mypy = [
    "mypy>=0.991",
    "pytest>=7.1",
]

[project.urls]
Homepage = "https://github.com/odashi/markup-prompter"
"Bug Tracker" = "https://github.com/odashi/markup-prompter/issues"

[tool.hatch.build]
include = [
    "*.py",
]
exclude = [
    "*_test.py",
]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["markup_prompter"]

[tool.hatch.version]
path = "markup_prompter/_version.py"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.isort]
profile = "black"
